--- a/examples/webpack/index.html
+++ b/examples/webpack/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>webpack example</title>
-  <script src="../../build/webpack/main.bundle.js"></script>
-</head>
-<body>
-  <canvas id="theCanvas"></canvas>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>webpack example</title>
+    <script src="../../build/webpack/main.bundle.js"></script>
+  </head>
+  <body>
+    <canvas id="theCanvas"></canvas>
+  </body>
 </html>
