--- a/test/font/font_test.html
+++ b/test/font/font_test.html
@@ -1,25 +1,24 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-  <title>PDF.js font tests</title>
+  <head>
+    <title>PDF.js font tests</title>
 
-  <link rel="stylesheet" type="text/css" href="../../node_modules/jasmine-core/lib/jasmine-core/jasmine.css">
+    <link rel="stylesheet" type="text/css" href="../../node_modules/jasmine-core/lib/jasmine-core/jasmine.css" />
 
-  <script src="../../node_modules/jasmine-core/lib/jasmine-core/jasmine.js"></script>
-  <script src="../../node_modules/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
+    <script src="../../node_modules/jasmine-core/lib/jasmine-core/jasmine.js"></script>
+    <script src="../../node_modules/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
 
-  <script type="importmap">
-    {
-      "imports": {
-        "pdfjs/": "../../src/",
-        "pdfjs-lib": "../../src/pdf.js",
-        "pdfjs-web/": "../../web/",
-        "pdfjs-test/": "../"
+    <script type="importmap">
+      {
+        "imports": {
+          "pdfjs/": "../../src/",
+          "pdfjs-lib": "../../src/pdf.js",
+          "pdfjs-web/": "../../web/",
+          "pdfjs-test/": "../"
+        }
       }
-    }
-  </script>
-  <script src="jasmine-boot.js" type="module"></script>
-</head>
-<body>
-</body>
+    </script>
+    <script src="jasmine-boot.js" type="module"></script>
+  </head>
+  <body></body>
 </html>
