--- a/test/unit/unit_test.html
+++ b/test/unit/unit_test.html
@@ -1,56 +1,55 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-  <title>PDF.js unit tests</title>
+  <head>
+    <title>PDF.js unit tests</title>
 
-  <link rel="stylesheet" type="text/css" href="../../node_modules/jasmine-core/lib/jasmine-core/jasmine.css">
+    <link rel="stylesheet" type="text/css" href="../../node_modules/jasmine-core/lib/jasmine-core/jasmine.css" />
 
-  <script src="../../node_modules/jasmine-core/lib/jasmine-core/jasmine.js"></script>
-  <script src="../../node_modules/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
+    <script src="../../node_modules/jasmine-core/lib/jasmine-core/jasmine.js"></script>
+    <script src="../../node_modules/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
 
-  <script type="importmap">
-    {
-      "imports": {
-        "pdfjs/": "../../src/",
-        "pdfjs-lib": "../../src/pdf.js",
-        "pdfjs-web/": "../../web/",
-        "pdfjs-test/": "../",
+    <script type="importmap">
+      {
+        "imports": {
+          "pdfjs/": "../../src/",
+          "pdfjs-lib": "../../src/pdf.js",
+          "pdfjs-web/": "../../web/",
+          "pdfjs-test/": "../",
 
-        "fluent-bundle": "../../node_modules/@fluent/bundle/esm/index.js",
-        "fluent-dom": "../../node_modules/@fluent/dom/esm/index.js",
-        "cached-iterable": "../../node_modules/cached-iterable/src/index.mjs",
+          "fluent-bundle": "../../node_modules/@fluent/bundle/esm/index.js",
+          "fluent-dom": "../../node_modules/@fluent/dom/esm/index.js",
+          "cached-iterable": "../../node_modules/cached-iterable/src/index.mjs",
 
-        "display-cmap_reader_factory": "../../src/display/cmap_reader_factory.js",
-        "display-standard_fontdata_factory": "../../src/display/standard_fontdata_factory.js",
-        "display-wasm_factory": "../../src/display/wasm_factory.js",
-        "display-fetch_stream": "../../src/display/fetch_stream.js",
-        "display-network": "../../src/display/network.js",
-        "display-node_stream": "../../src/display/stubs.js",
-        "display-node_utils": "../../src/display/stubs.js",
+          "display-cmap_reader_factory": "../../src/display/cmap_reader_factory.js",
+          "display-standard_fontdata_factory": "../../src/display/standard_fontdata_factory.js",
+          "display-wasm_factory": "../../src/display/wasm_factory.js",
+          "display-fetch_stream": "../../src/display/fetch_stream.js",
+          "display-network": "../../src/display/network.js",
+          "display-node_stream": "../../src/display/stubs.js",
+          "display-node_utils": "../../src/display/stubs.js",
 
-        "web-alt_text_manager": "../../web/alt_text_manager.js",
-        "web-annotation_editor_params": "../../web/annotation_editor_params.js",
-        "web-download_manager": "../../web/download_manager.js",
-        "web-external_services": "../../web/genericcom.js",
-        "web-null_l10n": "../../web/genericl10n.js",
-        "web-pdf_attachment_viewer": "../../web/pdf_attachment_viewer.js",
-        "web-pdf_cursor_tools": "../../web/pdf_cursor_tools.js",
-        "web-pdf_document_properties": "../../web/pdf_document_properties.js",
-        "web-pdf_find_bar": "../../web/pdf_find_bar.js",
-        "web-pdf_layer_viewer": "../../web/pdf_layer_viewer.js",
-        "web-pdf_outline_viewer": "../../web/pdf_outline_viewer.js",
-        "web-pdf_presentation_mode": "../../web/pdf_presentation_mode.js",
-        "web-pdf_sidebar": "../../web/pdf_sidebar.js",
-        "web-pdf_thumbnail_viewer": "../../web/pdf_thumbnail_viewer.js",
-        "web-preferences": "../../web/genericcom.js",
-        "web-print_service": "../../web/pdf_print_service.js",
-        "web-secondary_toolbar": "../../web/secondary_toolbar.js",
-        "web-toolbar": "../../web/toolbar.js"
+          "web-alt_text_manager": "../../web/alt_text_manager.js",
+          "web-annotation_editor_params": "../../web/annotation_editor_params.js",
+          "web-download_manager": "../../web/download_manager.js",
+          "web-external_services": "../../web/genericcom.js",
+          "web-null_l10n": "../../web/genericl10n.js",
+          "web-pdf_attachment_viewer": "../../web/pdf_attachment_viewer.js",
+          "web-pdf_cursor_tools": "../../web/pdf_cursor_tools.js",
+          "web-pdf_document_properties": "../../web/pdf_document_properties.js",
+          "web-pdf_find_bar": "../../web/pdf_find_bar.js",
+          "web-pdf_layer_viewer": "../../web/pdf_layer_viewer.js",
+          "web-pdf_outline_viewer": "../../web/pdf_outline_viewer.js",
+          "web-pdf_presentation_mode": "../../web/pdf_presentation_mode.js",
+          "web-pdf_sidebar": "../../web/pdf_sidebar.js",
+          "web-pdf_thumbnail_viewer": "../../web/pdf_thumbnail_viewer.js",
+          "web-preferences": "../../web/genericcom.js",
+          "web-print_service": "../../web/pdf_print_service.js",
+          "web-secondary_toolbar": "../../web/secondary_toolbar.js",
+          "web-toolbar": "../../web/toolbar.js"
+        }
       }
-    }
-  </script>
-  <script src="jasmine-boot.js" type="module"></script>
-</head>
-<body>
-</body>
+    </script>
+    <script src="jasmine-boot.js" type="module"></script>
+  </head>
+  <body></body>
 </html>
