--- a/examples/image_decoders/jpeg_viewer.html
+++ b/examples/image_decoders/jpeg_viewer.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <!--
 Copyright 2018 Mozilla Foundation
 
@@ -15,26 +15,26 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 <html dir="ltr" mozdisallowselectionprint>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <meta name="google" content="notranslate">
-  <title>PDF.js standalone JpegImage parser</title>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <meta name="google" content="notranslate" />
+    <title>PDF.js standalone JpegImage parser</title>
 
-  <style>
-    body {
-      background-color: #808080;
-      margin: 0;
-      padding: 0;
-    }
-  </style>
+    <style>
+      body {
+        background-color: #808080;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
 
-  <script src="../../node_modules/pdfjs-dist/image_decoders/pdf.image_decoders.mjs" type="module"></script>
-</head>
+    <script src="../../node_modules/pdfjs-dist/image_decoders/pdf.image_decoders.mjs" type="module"></script>
+  </head>
 
-<body tabindex="1">
-  <canvas id="jpegCanvas" width="0" height="0"></canvas>
+  <body tabindex="1">
+    <canvas id="jpegCanvas" width="0" height="0"></canvas>
 
-  <script src="jpeg_viewer.mjs" type="module"></script>
-</body>
+    <script src="jpeg_viewer.mjs" type="module"></script>
+  </body>
 </html>
