--- a/examples/text-only/index.html
+++ b/examples/text-only/index.html
@@ -1,14 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Text-only PDF.js example</title>
     <script src="../../node_modules/pdfjs-dist/build/pdf.mjs" type="module"></script>
     <script src="pdf2svg.mjs" type="module"></script>
-</head>
-<body>
-  <p>Text-only PDF.js example</p>
-  <div id="pageContainer" style="display: inline-block; border: solid 1px black;">
-  </div>
-</body>
+  </head>
+  <body>
+    <p>Text-only PDF.js example</p>
+    <div id="pageContainer" style="display: inline-block; border: solid 1px black"></div>
+  </body>
 </html>
